
	* Make.defs, namedapp/namedapp.c: Several structural changes made to get a
	  clean compile under the ez80 ZDS-II toolchain (no design changes).
	* apps/examples/buttons: Add a test for the new standardized button interfaces
	* apps/examples/nxtext: Add another NX graphics test.  This one focus on
	  placing text on the background while pop-up windows occur.  Text should
	  continue to update normally with or without the popup windows present.

6.7 2011-08-02 Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/examples/nx and nxtext:  These examples can now be built as NSH
	  "built-in" commands.
	* apps/examples/nxhello:  The simplest graphics example:  It just says
	  "Hello, World!" in the center of the display. This example can also be
	  built as an NSH "built-in" command.
	* apps/examples/nx, ntext, and nxhello:  All updated to use the new
	  NuttX font interfaces.
	* apps/examples/nximage:  Another super simple  graphics example:  It just puts
	  the NuttX logo in the center of the display. This example can also be
	  built as an NSH "built-in" command.
	* apps/examples/usbstorage: Can now be built as two NSH "built-in" commands:
	  'msconn' will connect the USB mass storage device; 'msdis' will disconnect
	  the USB storage device.
	* apps/examples/nx*:  All NX header files moved from nuttx/include/nuttx to 
	  nuttx/include/nuttx/nx.
	* apps/examples/usbstorage: Added instrumentation to monitor memory usage
	  to check for memory leaks in the USB storage driver.
	* apps/examples/nxhello/nxhello_bkgd.c:  Fix handling of allocated glyph
	  memory.

6.8 2011-08-11 Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/examples/nxlines:  Added a test for NX line drawing capabilities.

6.9 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* apps/examples/nxlines:  Extend the line drawing text to include drawing
	  of circles.
	* apps/system/i2c:  Add an I2C test tool that should help to bring up I2C
	  devices (when it is fully functional).